解决Q1&2 导航栏下拉菜单显示不充分

--- a/XMUER/appsettings.json
+++ b/XMUER/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;uid=root;pwd=qq6666774;port=3306;database=bighomeworkfordotnet;"
+    "DefaultConnection": "server=localhost;uid=xmuer;pwd=123456;port=3306;database=bighomeworkfordotnet;"
   },
 
   "Logging": {
